--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Recipe-Frontend",
+  "name": "recipe-frontend",
   "version": "1.0.0",
   "description": "Frontend (UI) for the Recipe project",
   "main": "app.js",
@@ -29,6 +29,7 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.1",
     "nodemon": "^3.0.1",
-    "prettier": "^3.0.2"
+    "prettier": "^3.0.2",
+    "pug": "^3.0.2"
   }
 }
