--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "client": "nodemon app"
+    "client": "nodemon ./app.js"
   },
   "repository": {
     "type": "git",
